--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ijzn-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "个人开发脚手架",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "ijzn-cli": "./bin/index.js"
+    "ijzn-cli": "bin/index.js"
   },
   "repository": {
     "type": "git",
